--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <block>
         <div class="usermotto">
           <!-- <text class="user-motto">{{motto}}</text> -->
-          <text class="auth" id="auth">研究生用户,入校授权有效!</text>
+          <text class="auth" id="auth">研究生用户，入校授权有效！</text>
         </div>
         <!-- <div class="divLine"></div> -->
         <hr align="center" color="#E0E3DA" size="0.5">
